architecture for getting size for #1594
