# api/src/api/notebooks.ts
@@ -88,6 +88,7 @@ import {
   countRecordsInNotebook,
   createNotebook,
   deleteNotebook,
+  getByteCount,
   getCompiledUiSpecModel,
   getProjectById,
   getRolesForNotebook,
@@ -551,6 +552,7 @@ api.get(
     res.json({
       ...project,
       recordCount: await countRecordsInNotebook(projectId),
+      byteCount: await getByteCount(projectId),
     } satisfies GetNotebookResponse);
   }
 );
